--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,28 @@
-@media only screen and (max-width: 600px) {
-  body {
-    font-size: 16px;
-  }
-
-  h {
-    font-size: 22px;
-  }
-}
-
 body {
   font-family: "Times New Roman", Times, serif;
-  padding: 1.3vw;
+  padding: 0;
+  margin: 0;
+  font-size: 1em;
+}
+
+.imgpc{
+  display: block;
 }
 
 p {
   font-size: 18px;
 }
 
+.img-mobile{
+  display: none;
+}
+
 header {
   text-align: center;
   background-color: rgba(150, 228, 255, 1);
-  padding: 2vw;
+  padding: 1vw;
   border-radius: 25px;
+  margin-top: 5vw;
 }
 
 h1 {
@@ -33,25 +34,26 @@ nav {
   background-color: white;
   padding: 0;
   font-size: 21px;
-  border: 1px rgba(150, 228, 255, 1);
-  border-radius: 15px;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 
 ul.begin {
   display: flex;
   list-style-position: inside;
-  letter-spacing: 0.1vw;
   text-align: center;
   font-size: 1.2vw;
   list-style: none;
+  justify-content: center;
 }
 
 li.begin {
-  margin: 1vw;
-  text-align: center;
+  margin-left: 2vw;
+  margin-right: 2vw;
 }
 
-a {
+a.begin {
   color: rgba(150, 228, 255, 1);
   text-decoration: none;
   font-weight: bold;
@@ -61,6 +63,10 @@ a {
 a:hover {
   text-decoration: underline;
   font-style: oblique;
+}
+
+main {
+  padding: 2vw;
 }
 
 section.ik {
@@ -101,7 +107,10 @@ section.leren {
   background-color: rgba(150, 228, 255, 1);
   padding: 1vw;
   border-radius: 25px;
+}
 
+a.rondvaart {
+  color: black;
 }
 
 h3 {
@@ -112,27 +121,33 @@ h3 {
 }
 
 section.beach {
-  background-color:rgb(170, 128, 255);
+  background-color: rgb(170, 128, 255);
   padding: 1vw;
   border-radius: 25px;
+}
+
+div.beach {
+  display: flex;
+  flex-direction: row;
 }
 
 img.hond {
   width: 14vw;
   height: 14vw;
-  float: left;
+  float: right;
   padding: 1vw;
 }
 
 h4 {
   font-size: 33px;
   padding: 0.8vw;
-  color:rgb(170, 128, 255);
+  color: rgb(170, 128, 255);
   border-radius: 15px;
 }
 
 h4.beach {
   padding: 0.8vw;
+  width: 100%;
 }
 
 section.media {
@@ -144,8 +159,11 @@ section.media {
 p.media {
   margin-right: 58vw;
 }
+h4.mediatel {
+display: none;
+}
 
-h4.media {
+h4.medialap {
   background-color: white;
   color: rgba(150, 228, 255, 1);
 }
@@ -180,4 +198,68 @@ th {
 
 th.rij {
   background-color: rgb(4000, 160, 5800);
+}
+
+@media only screen and (max-width: 600px) {
+h4.medialap {
+  display: none;
+}
+h4.mediatel {
+  display: block;
+  color: rgba(150, 228, 255, 1);
+}
+
+  div.beach {
+    flex-direction: column;
+  }
+
+  .img-pc{
+    display: none;
+  }
+
+  .img-mobile {
+    display: block;
+  }
+
+  body {
+    font-size: 16px;
+  }
+
+  .hobbie {
+    margin: 0;
+  }
+
+  img.games {
+    display: none;
+  }
+
+  img.hond {
+    width: 50%;
+    height: 50%;
+    margin-top: 0;
+  }
+
+  ul.begin {
+    margin: auto;
+    padding: auto;
+  }
+
+  li.begin {
+    font-size: 14px;
+  }
+
+  table.socialMedia {
+    font-size: 12px;
+    width: 100%;
+    display: inline-table;
+    margin: auto;
+  }
+
+  p.media {
+    margin: 0;
+  }
+
+  h1 h2 h3 h4 {
+    font-size: 22px;
+  }
 }
