--- a/css/style.css
+++ b/css/style.css
@@ -382,7 +382,7 @@ div.slideknop {
 button.slideshow {
   animation: buttonpic 5s ease-out 1s infinite;
   background-color: rgb(150, 228, 255);
-  display: flexbox;
+  display: flex;
   font-size: 1em;
   font-weight: 100;
   width: fit-content;
@@ -393,7 +393,7 @@ button.slideshow {
 }
 
 button.slideshow:hover {
-  box-shadow: 0 0px 20px 0 rgba(187, 151, 255, 0.652);
+  box-shadow: 0 0 20px 0 rgba(187, 151, 255, 0.652);
 }
 
 button.close {
@@ -924,6 +924,11 @@ th.rij {
   background-color: rgb(4000, 160, 5800);
 }
 
+
+
+
+
+
 /* ---------- Voor de skillspagina aka skills.html ---------- */
 
 h3 {
@@ -947,6 +952,7 @@ section.codes {
   margin-top: 3%;
 }
 section.code-layout {
+  padding: 2%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -955,7 +961,7 @@ section.codepic {
   overflow: hidden;
   border: 2px solid black;
   width: 25vw;
-  height: 25vw;
+  height: fit-content;
   background-color: white;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.492), 0 6px 20px 0 rgba(0, 0, 0, 0.656);
 }
@@ -965,15 +971,22 @@ section.cle1 {
   display: flex;
 }
 div.skill-text {
+  min-height: fit-content;
+  padding: 3%;
+}
+p.skill-text {
   text-align: center;
-  height: 10%;
-  bottom: 0;
   font-size: 1.2em;
   font-weight: 900;
-  padding-top: 5%;
-  padding-bottom: 5%;
 }
-
+ul.skill-text {
+  text-align: left;
+}
+section.project-layout {
+  padding: 2%;
+  display: flex;
+  justify-content: space-evenly;
+}
 section.project {
   background-color: rgb(255, 153, 255);
   border-radius: 25px;
@@ -1314,7 +1327,9 @@ section.codepic {
 img.skills {
   height: 50vw;
 }
-
+section.project-layout {
+  display: block;
+}
 
 
 
